unpackaged/main/default/objects/Recurring_Billing__c/Recurring_Billing__c.object-meta.xml
<CustomObject>
    <label>Legacy Recurring Billing</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Recurring Billing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Billing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>