unpackaged/main/default/objects/Recurring_Billing__c/fields/Billing_Category__c.field-meta.xml
<CustomField>
    <fullName>Billing_Category__c</fullName>
    <label>Billing Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier Access Services</fullName>
            </value>
            <value>
                <fullName>Data Center Services</fullName>
            </value>
            <value>
                <fullName>Customer Premise Equipment</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Services</fullName>
            </value>
            <value>
                <fullName>Taxes, Surcharges &amp; Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>