unpackaged/main/default/objects/Recurring_Billing__c/fields/Billing_Group__c.field-meta.xml
<CustomField>
    <fullName>Billing_Group__c</fullName>
    <formula>Text( Product_Name__r.GA_Billing_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Group</label>
    <type>Text</type>
</CustomField>