unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_April__c.field-meta.xml
<CustomField>
    <fullName>BP_April__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP April</label>
    <type>Checkbox</type>
</CustomField>