unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_August__c.field-meta.xml
<CustomField>
    <fullName>BP_August__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP August</label>
    <type>Checkbox</type>
</CustomField>