unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_December__c.field-meta.xml
<CustomField>
    <fullName>BP_December__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP December</label>
    <type>Checkbox</type>
</CustomField>