unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_January__c.field-meta.xml
<CustomField>
    <fullName>BP_January__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP January</label>
    <type>Checkbox</type>
</CustomField>