unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_March__c.field-meta.xml
<CustomField>
    <fullName>BP_March__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP March</label>
    <type>Checkbox</type>
</CustomField>