unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_May__c.field-meta.xml
<CustomField>
    <fullName>BP_May__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP May</label>
    <type>Checkbox</type>
</CustomField>