unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_October__c.field-meta.xml
<CustomField>
    <fullName>BP_October__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP October</label>
    <type>Checkbox</type>
</CustomField>