unpackaged/main/default/objects/Recurring_Billing__c/fields/BP_September__c.field-meta.xml
<CustomField>
    <fullName>BP_September__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BP September</label>
    <type>Checkbox</type>
</CustomField>