unpackaged/main/default/objects/Recurring_Billing__c/fields/Carrier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Account_Number__c</fullName>
    <label>Carrier Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>