unpackaged/main/default/objects/Recurring_Billing__c/fields/Carrier_Invoice_Group__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Invoice_Group__c</fullName>
    <label>Carrier Invoice Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Carrier__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Long Distance</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>