unpackaged/main/default/objects/Recurring_Billing__c/fields/CCE_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>CCE_Application_Number__c</fullName>
    <label>CCE Application Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>