unpackaged/main/default/objects/Recurring_Billing__c/fields/CCE_Bill_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CCE_Bill_Sequence__c</fullName>
    <label>CCE_Bill Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>