unpackaged/main/default/objects/Recurring_Billing__c/fields/CCE_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>CCE_Portfolio__c</fullName>
    <label>CCE Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCE__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>IPRO-1</fullName>
            </value>
            <value>
                <fullName>TSB-1</fullName>
            </value>
            <value>
                <fullName>GA-019130-0000</fullName>
            </value>
            <value>
                <fullName>GA-019130-0001</fullName>
            </value>
            <value>
                <fullName>MTL-1</fullName>
            </value>
            <value>
                <fullName>WF-207778.0000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>