unpackaged/main/default/objects/Recurring_Billing__c/fields/CCE_Portfolio_Group__c.field-meta.xml
<CustomField>
    <fullName>CCE_Portfolio_Group__c</fullName>
    <formula>TEXT(CCE__c)+" - "+TEXT(CCE_Portfolio__c)+" - "+ TEXT(CCE_Lease_Type__c)+" - "+TEXT( CCE_Funding_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE Portfolio Group</label>
    <type>Text</type>
</CustomField>