unpackaged/main/default/objects/Recurring_Billing__c/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>