unpackaged/main/default/objects/Recurring_Billing__c/fields/Copy__c.field-meta.xml
<CustomField>
    <fullName>Copy__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copy Product Description To Invoice</label>
    <type>Checkbox</type>
</CustomField>