unpackaged/main/default/objects/Recurring_Billing__c/fields/Copy_Product_Price_to_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Copy_Product_Price_to_Monthly_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copy Product Price to Monthly Price</label>
    <type>Checkbox</type>
</CustomField>