unpackaged/main/default/objects/Recurring_Billing__c/fields/Invoice_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Product_Description__c</fullName>
    <label>Invoice Product Description</label>
    <type>TextArea</type>
</CustomField>