unpackaged/main/default/objects/Recurring_Billing__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>