unpackaged/main/default/objects/Recurring_Billing__c/fields/Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Charge__c</fullName>
    <label>Monthly Charge</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>