unpackaged/main/default/objects/Recurring_Billing__c/fields/Suspend_Billing__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Billing</label>
    <type>Checkbox</type>
</CustomField>