unpackaged/main/default/objects/Recurring_Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>CCE_Portfolio_Description__c</columns>
    <columns>CCE_Lease_Type__c</columns>
    <columns>CCE_Funding_Status__c</columns>
    <columns>Monthly_Charge__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Monthly_Charge__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>